--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,83 +10,83 @@
   </head>
 
   <body>
-    <nav class="navbar" role="navigation" aria-label="main navigation">
+    <nav class="navbar has-background-dark" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
-        <a class="navbar-item">
+        <a class="navbar-item has-text-light">
           TC得票数グラフ
         </a>
 
         <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
-          <span aria-hidden="true"></span>
-          <span aria-hidden="true"></span>
-          <span aria-hidden="true"></span>
+          <span class="has-background-light" aria-hidden="true"></span>
+          <span class="has-background-light" aria-hidden="true"></span>
+          <span class="has-background-light" aria-hidden="true"></span>
         </a>
       </div>
 
-      <div id="navbarBasicExample" class="navbar-menu">
+      <div id="navbarBasicExample" class="navbar-menu has-background-dark">
         <div class="navbar-start">
-          <div class="navbar-item has-dropdown is-hoverable">
-            <a class="navbar-link">
+          <div class="navbar-item has-dropdown is-hoverable has-background-dark has-text-light">
+            <a class="navbar-link has-background-dark has-text-light">
               超ビーチバレー
             </a>
-            <div class="navbar-dropdown">
-              <a class="navbar-item">
+            <div class="navbar-dropdown has-background-dark has-text-light">
+              <a class="navbar-item has-text-light">
                 新入生
               </a>
-              <a class="navbar-item">
+              <a class="navbar-item has-text-light">
                 先輩
               </a>
-              <a class="navbar-item">
+              <a class="navbar-item has-text-light">
                 キング
               </a>
-              <a class="navbar-item">
+              <a class="navbar-item has-text-light">
                 右腕クイーン
               </a>
-              <a class="navbar-item">
+              <a class="navbar-item has-text-light">
                 同級生
               </a>
             </div>
           </div>
-          <div class="navbar-item has-dropdown is-hoverable">
-            <a class="navbar-link">
+          <div class="navbar-item has-dropdown is-hoverable has-background-dark">
+            <a class="navbar-link has-background-dark has-text-light">
               三姉妹カフェ
             </a>
-            <div class="navbar-dropdown">
-              <a class="navbar-item">
+            <div class="navbar-dropdown has-background-dark">
+              <a class="navbar-item has-text-light">
                 長女
               </a>
-              <a class="navbar-item">
+              <a class="navbar-item has-text-light">
                 次女
               </a>
-              <a class="navbar-item">
+              <a class="navbar-item has-text-light">
                 三女
               </a>
-              <a class="navbar-item">
+              <a class="navbar-item has-text-light">
                 ネコ
               </a>
-              <a class="navbar-item">
+              <a class="navbar-item has-text-light">
                 お客さん
               </a>
             </div>
           </div>
-          <div class="navbar-item has-dropdown is-hoverable">
-            <a class="navbar-link">
+          <div class="navbar-item has-dropdown is-hoverable has-background-dark">
+            <a class="navbar-link has-background-dark has-text-light">
               劇場サスペンス
             </a>
-            <div class="navbar-dropdown">
-              <a class="navbar-item">
+            <div class="navbar-dropdown has-background-dark has-text-light">
+              <a class="navbar-item has-text-light">
                 新ヒロイン
               </a>
-              <a class="navbar-item">
+              <a class="navbar-item has-text-light">
                 スタア
               </a>
-              <a class="navbar-item">
+              <a class="navbar-item has-text-light">
                 元大女優
               </a>
-              <a class="navbar-item">
+              <a class="navbar-item has-text-light">
                 支配人
               </a>
-              <a class="navbar-item">
+              <a class="navbar-item has-text-light">
                 探偵
               </a>
             </div>
