--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,69 +26,39 @@
       <div id="navbarBasicExample" class="navbar-menu has-background-dark">
         <div class="navbar-start">
           <div class="navbar-item has-dropdown is-hoverable has-background-dark has-text-light">
-            <a class="navbar-link has-background-dark has-text-light">
+            <a class="navbar-item has-background-dark has-text-light">
               超ビーチバレー
             </a>
             <div class="navbar-dropdown has-background-dark has-text-light">
-              <a class="navbar-item has-text-light">
-                新入生
-              </a>
-              <a class="navbar-item has-text-light">
-                先輩
-              </a>
-              <a class="navbar-item has-text-light">
-                キング
-              </a>
-              <a class="navbar-item has-text-light">
-                右腕クイーン
-              </a>
-              <a class="navbar-item has-text-light">
-                同級生
-              </a>
+              <%= link_to '新入生', 'shinnyusei', class: 'navbar-item has-background-dark has-text-light' %>
+              <%= link_to '先輩', 'senpai', class: 'navbar-item has-background-dark has-text-light' %>
+              <%= link_to 'キング', 'king', class: 'navbar-item has-background-dark has-text-light' %>
+              <%= link_to '右腕クイーン', 'migiude', class: 'navbar-item has-background-dark has-text-light' %>
+              <%= link_to '同級生', 'doukyusei', class: 'navbar-item has-background-dark has-text-light' %>
             </div>
           </div>
           <div class="navbar-item has-dropdown is-hoverable has-background-dark">
-            <a class="navbar-link has-background-dark has-text-light">
+            <a class="navbar-item has-background-dark has-text-light">
               三姉妹カフェ
             </a>
             <div class="navbar-dropdown has-background-dark">
-              <a class="navbar-item has-text-light">
-                長女
-              </a>
-              <a class="navbar-item has-text-light">
-                次女
-              </a>
-              <a class="navbar-item has-text-light">
-                三女
-              </a>
-              <a class="navbar-item has-text-light">
-                ネコ
-              </a>
-              <a class="navbar-item has-text-light">
-                お客さん
-              </a>
+              <%= link_to '長女', 'choujo', class: 'navbar-item has-background-dark has-text-light' %>
+              <%= link_to '次女', 'jijo', class: 'navbar-item has-background-dark has-text-light' %>
+              <%= link_to '三女', 'sanjo', class: 'navbar-item has-background-dark has-text-light' %>
+              <%= link_to 'ネコ', 'cat', class: 'navbar-item has-background-dark has-text-light' %>
+              <%= link_to 'お客さん', 'okyakusan', class: 'navbar-item has-background-dark has-text-light' %>
             </div>
           </div>
           <div class="navbar-item has-dropdown is-hoverable has-background-dark">
-            <a class="navbar-link has-background-dark has-text-light">
+            <a class="navbar-item has-background-dark has-text-light">
               劇場サスペンス
             </a>
             <div class="navbar-dropdown has-background-dark has-text-light">
-              <a class="navbar-item has-text-light">
-                新ヒロイン
-              </a>
-              <a class="navbar-item has-text-light">
-                スタア
-              </a>
-              <a class="navbar-item has-text-light">
-                元大女優
-              </a>
-              <a class="navbar-item has-text-light">
-                支配人
-              </a>
-              <a class="navbar-item has-text-light">
-                探偵
-              </a>
+              <%= link_to '新ヒロイン', 'heroine', class: 'navbar-item has-background-dark has-text-light' %>
+              <%= link_to 'スタア', 'star', class: 'navbar-item has-background-dark has-text-light' %>
+              <%= link_to '元大女優', 'daijoyu', class: 'navbar-item has-background-dark has-text-light' %>
+              <%= link_to '支配人', 'shihainin', class: 'navbar-item has-background-dark has-text-light' %>
+              <%= link_to '探偵', 'tantei', class: 'navbar-item has-background-dark has-text-light' %>
             </div>
           </div>
         </div>
