--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -66,5 +66,11 @@
     </nav>
 
     <%= yield %>
+
+    <footer class="footer">
+      <div class="content has-text-centered">
+        <%= link_to '@gomao9', 'https://twitter.com/gomao9', class: 'has-text-grey-light' %>
+      </div>
+    </footer>
   </body>
 </html>
