--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,38 +27,38 @@
         <div class="navbar-start">
           <div class="navbar-item has-dropdown is-hoverable has-background-dark has-text-light">
             <a class="navbar-item has-background-dark has-text-light">
-              超ビーチバレー
+              孤島サスペンスホラー
             </a>
             <div class="navbar-dropdown has-background-dark has-text-light">
-              <%= link_to '新入生', 'shinnyusei', class: 'navbar-item has-background-dark has-text-light' %>
-              <%= link_to '先輩', 'senpai', class: 'navbar-item has-background-dark has-text-light' %>
-              <%= link_to 'キング', 'king', class: 'navbar-item has-background-dark has-text-light' %>
-              <%= link_to '右腕クイーン', 'migiude', class: 'navbar-item has-background-dark has-text-light' %>
-              <%= link_to '同級生', 'doukyusei', class: 'navbar-item has-background-dark has-text-light' %>
+              <%= link_to '主人公', 'heroine', class: 'navbar-item has-background-dark has-text-light' %>
+              <%= link_to '友達', 'friend', class: 'navbar-item has-background-dark has-text-light' %>
+              <%= link_to '先生', 'teacher', class: 'navbar-item has-background-dark has-text-light' %>
+              <%= link_to '館の女主人', 'landlady', class: 'navbar-item has-background-dark has-text-light' %>
+              <%= link_to 'メイド', 'maid', class: 'navbar-item has-background-dark has-text-light' %>
             </div>
           </div>
           <div class="navbar-item has-dropdown is-hoverable has-background-dark">
             <a class="navbar-item has-background-dark has-text-light">
-              三姉妹カフェ
+              おとぎの国の物語
             </a>
             <div class="navbar-dropdown has-background-dark">
-              <%= link_to '長女', 'choujo', class: 'navbar-item has-background-dark has-text-light' %>
-              <%= link_to '次女', 'jijo', class: 'navbar-item has-background-dark has-text-light' %>
-              <%= link_to '三女', 'sanjo', class: 'navbar-item has-background-dark has-text-light' %>
-              <%= link_to 'ネコ', 'cat', class: 'navbar-item has-background-dark has-text-light' %>
-              <%= link_to 'お客さん', 'okyakusan', class: 'navbar-item has-background-dark has-text-light' %>
+              <%= link_to '少女', 'girl', class: 'navbar-item has-background-dark has-text-light' %>
+              <%= link_to '妖精', 'fairy', class: 'navbar-item has-background-dark has-text-light' %>
+              <%= link_to '魔法使い', 'witch', class: 'navbar-item has-background-dark has-text-light' %>
+              <%= link_to '狼', 'wolf', class: 'navbar-item has-background-dark has-text-light' %>
+              <%= link_to '旅人', 'traveller', class: 'navbar-item has-background-dark has-text-light' %>
             </div>
           </div>
           <div class="navbar-item has-dropdown is-hoverable has-background-dark">
             <a class="navbar-item has-background-dark has-text-light">
-              劇場サスペンス
+              近未来アウトサイダー
             </a>
             <div class="navbar-dropdown has-background-dark has-text-light">
-              <%= link_to '新ヒロイン', 'heroine', class: 'navbar-item has-background-dark has-text-light' %>
-              <%= link_to 'スタア', 'star', class: 'navbar-item has-background-dark has-text-light' %>
-              <%= link_to '元大女優', 'daijoyu', class: 'navbar-item has-background-dark has-text-light' %>
-              <%= link_to '支配人', 'shihainin', class: 'navbar-item has-background-dark has-text-light' %>
-              <%= link_to '探偵', 'tantei', class: 'navbar-item has-background-dark has-text-light' %>
+              <%= link_to 'ダスク', 'dusk', class: 'navbar-item has-background-dark has-text-light' %>
+              <%= link_to 'バスターブレイド', 'busterblade', class: 'navbar-item has-background-dark has-text-light' %>
+              <%= link_to 'アマリリス', 'amaryllis', class: 'navbar-item has-background-dark has-text-light' %>
+              <%= link_to 'ベルベット', 'velvet', class: 'navbar-item has-background-dark has-text-light' %>
+              <%= link_to 'ファイナルデイ', 'finalday', class: 'navbar-item has-background-dark has-text-light' %>
             </div>
           </div>
         </div>
