--- a/app/views/scores/index.html.erb
+++ b/app/views/scores/index.html.erb
@@ -1,1 +1,11 @@
-<%= high_chart('graph', @graph) %>
+<div class="container">
+  <section class="hero">
+    <div class="hero-body">
+      <div class="container">
+        <h1 class="title"><%= @subject %></h1>
+      </div>
+    </div>
+  </section>
+
+  <%= high_chart('graph', @graph) %>
+</div>
