fix for changess and wastes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -65,7 +65,10 @@
       </div>
     </nav>
 
-    <%= yield %>
+    <div class="container">
+      </section>
+      <%= yield %>
+    </div>
 
     <footer class="footer">
       <div class="content has-text-centered">
