--- a/app/views/scores/changes.html.erb
+++ b/app/views/scores/changes.html.erb
@@ -1,1 +1,12 @@
+<section class="hero">
+  <div class="hero-body">
+    <div class="container">
+      <h1 class="subtitle is-3">トップ交替回数</h1>
+      <p>
+      ※役ごとに1位が入れ替わった回数を算出したもの
+      </p>
+    </div>
+  </div>
+</section>
+
 <%= high_chart('changes', @graph) %>
