--- a/app/views/scores/wastes.html.erb
+++ b/app/views/scores/wastes.html.erb
@@ -1,1 +1,14 @@
+<section class="hero">
+  <div class="hero-body">
+    <div class="container">
+      <h1 class="subtitle is-3">アイドル別死票数</h1>
+      <p>
+      ※アイドルごとに
+      　<pre>死票 = 総得票数(10位以内) - 得票トップの役の得票数</pre>
+      を算出したもの
+      </p>
+    </div>
+  </div>
+</section>
+
 <%= high_chart('wastes', @graph) %>
