--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
+    <%= analytics_init if Rails.env.production? %>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
 
