--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,7 +46,7 @@
               <%= link_to '少女', 'girl', class: 'navbar-item has-background-dark has-text-light' %>
               <%= link_to '妖精', 'fairy', class: 'navbar-item has-background-dark has-text-light' %>
               <%= link_to '魔法使い', 'witch', class: 'navbar-item has-background-dark has-text-light' %>
-              <%= link_to '狼', 'wolf', class: 'navbar-item has-background-dark has-text-light' %>
+              <%= link_to 'オオカミ', 'wolf', class: 'navbar-item has-background-dark has-text-light' %>
               <%= link_to '旅人', 'traveller', class: 'navbar-item has-background-dark has-text-light' %>
             </div>
           </div>
