--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -63,6 +63,12 @@
             </div>
           </div>
         </div>
+        <div class="navbar-end">
+          <a class="navbar-item has-background-dark has-text-light">
+            このサイトについて
+          </a>
+        </div>
+
       </div>
     </nav>
 
