--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -64,9 +64,7 @@
           </div>
         </div>
         <div class="navbar-end">
-          <a class="navbar-item has-background-dark has-text-light">
-            このサイトについて
-          </a>
+          <%= link_to 'このサイトについて', 'about', class: 'navbar-item has-background-dark has-text-light' %>
         </div>
 
       </div>
