--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,30 +1,38 @@
 <section class="hero">
   <div class="hero-body">
     <div class="container">
-      <h1 class="title">孤島サスペンスホラー</h1>
+      <h1 class="title is-4">直近24時間の推移</h1>
+    </div>
+  </div>
+</section>
+
+<section class="hero">
+  <div class="hero-body">
+    <div class="container">
+      <h1 class="subtitle is-4">孤島サスペンスホラー</h1>
     </div>
   </div>
 </section>
 
 <div class="columns is-multiline">
   <div class="column is-one-third">
-    <h1 class="subtitle">主人公</h1>
+    <%= link_to '主人公', '/', class: 'subtitle is-6' %>
     <%= high_chart('heroine', @heroine) %>
   </div>
   <div class="column is-one-third">
-    <h1 class="subtitle">友達</h1>
+    <%= link_to '友達', '/', class: 'subtitle is-6' %>
     <%= high_chart('friend', @friend) %>
   </div>
   <div class="column is-one-third">
-    <h1 class="subtitle">先生</h1>
+    <%= link_to '先生', '/', class: 'subtitle is-6' %>
     <%= high_chart('teacher', @teacher) %>
   </div>
   <div class="column is-one-third">
-    <h1 class="subtitle">館の女主人</h1>
+    <%= link_to '館の女主人', '/', class: 'subtitle is-6' %>
     <%= high_chart('landlady', @landlady) %>
   </div>
   <div class="column is-one-third">
-    <h1 class="subtitle">メイド</h1>
+    <%= link_to 'メイド', '/', class: 'subtitle is-6' %>
     <%= high_chart('maid', @maid) %>
   </div>
 </div>
@@ -32,30 +40,30 @@
 <section class="hero">
   <div class="hero-body">
     <div class="container">
-      <h1 class="title">おとぎの国の物語</h1>
+      <h1 class="subtitle is-4">おとぎの国の物語</h1>
     </div>
   </div>
 </section>
 
 <div class="columns is-multiline">
   <div class="column is-one-third">
-    <h1 class="subtitle">少女</h1>
+    <%= link_to '少女', '/', class: 'subtitle is-6' %>
     <%= high_chart('girl', @girl) %>
   </div>
   <div class="column is-one-third">
-    <h1 class="subtitle">妖精</h1>
+    <%= link_to '妖精', '/', class: 'subtitle is-6' %>
     <%= high_chart('fairy', @fairy) %>
   </div>
   <div class="column is-one-third">
-    <h1 class="subtitle">魔法使い</h1>
+    <%= link_to '魔法使い', '/', class: 'subtitle is-6' %>
     <%= high_chart('witch', @witch) %>
   </div>
   <div class="column is-one-third">
-    <h1 class="subtitle">オオカミ</h1>
+    <%= link_to 'オオカミ', '/', class: 'subtitle is-6' %>
     <%= high_chart('wolf', @wolf) %>
   </div>
   <div class="column is-one-third">
-    <h1 class="subtitle">旅人</h1>
+    <%= link_to '旅人', '/', class: 'subtitle is-6' %>
     <%= high_chart('traveller', @traveller) %>
   </div>
 </div>
@@ -63,30 +71,30 @@
 <section class="hero">
   <div class="hero-body">
     <div class="container">
-      <h1 class="title">近未来アウトサイダー</h1>
+      <h1 class="subtitle is-4">近未来アウトサイダー</h1>
     </div>
   </div>
 </section>
 
 <div class="columns is-multiline">
   <div class="column is-one-third">
-    <h1 class="subtitle">ダスク</h1>
+    <%= link_to 'ダスク', '/', class: 'subtitle is-6' %>
     <%= high_chart('dusk', @dusk) %>
   </div>
   <div class="column is-one-third">
-    <h1 class="subtitle">バスターブレイド</h1>
+    <%= link_to 'バスターブレイド', '/', class: 'subtitle is-6' %>
     <%= high_chart('busterblade', @busterblade) %>
   </div>
   <div class="column is-one-third">
-    <h1 class="subtitle">アマリリス</h1>
+    <%= link_to 'アマリリス', '/', class: 'subtitle is-6' %>
     <%= high_chart('amaryllis', @amaryllis) %>
   </div>
   <div class="column is-one-third">
-    <h1 class="subtitle">ベルベット</h1>
+    <%= link_to 'ベルベット', '/', class: 'subtitle is-6' %>
     <%= high_chart('velvet', @velvet) %>
   </div>
   <div class="column is-one-third">
-    <h1 class="subtitle">ファイナルデイ</h1>
+    <%= link_to 'ファイナルデイ', '/', class: 'subtitle is-6' %>
     <%= high_chart('finalday', @finalday) %>
   </div>
 </div>
