--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,10 +13,7 @@
   <body>
     <nav class="navbar has-background-dark" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
-        <a class="navbar-item has-text-light">
-          TC得票数グラフ
-        </a>
-
+        <%= link_to 'TC得票数グラフ', '/', class: 'navbar-item has-text-light' %>
         <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
           <span class="has-background-light" aria-hidden="true"></span>
           <span class="has-background-light" aria-hidden="true"></span>
