--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -16,23 +16,23 @@
 
 <div class="columns is-multiline">
   <div class="column is-one-third">
-    <%= link_to '主人公', '/', class: 'subtitle is-6' %>
+    <%= link_to '主人公', 'heroine', class: 'subtitle is-6' %>
     <%= high_chart('heroine', @heroine) %>
   </div>
   <div class="column is-one-third">
-    <%= link_to '友達', '/', class: 'subtitle is-6' %>
+    <%= link_to '友達', 'friend', class: 'subtitle is-6' %>
     <%= high_chart('friend', @friend) %>
   </div>
   <div class="column is-one-third">
-    <%= link_to '先生', '/', class: 'subtitle is-6' %>
+    <%= link_to '先生', 'teacher', class: 'subtitle is-6' %>
     <%= high_chart('teacher', @teacher) %>
   </div>
   <div class="column is-one-third">
-    <%= link_to '館の女主人', '/', class: 'subtitle is-6' %>
+    <%= link_to '館の女主人', 'landlady', class: 'subtitle is-6' %>
     <%= high_chart('landlady', @landlady) %>
   </div>
   <div class="column is-one-third">
-    <%= link_to 'メイド', '/', class: 'subtitle is-6' %>
+    <%= link_to 'メイド', 'maid', class: 'subtitle is-6' %>
     <%= high_chart('maid', @maid) %>
   </div>
 </div>
@@ -47,23 +47,23 @@
 
 <div class="columns is-multiline">
   <div class="column is-one-third">
-    <%= link_to '少女', '/', class: 'subtitle is-6' %>
+    <%= link_to '少女', 'girl', class: 'subtitle is-6' %>
     <%= high_chart('girl', @girl) %>
   </div>
   <div class="column is-one-third">
-    <%= link_to '妖精', '/', class: 'subtitle is-6' %>
+    <%= link_to '妖精', 'fairy', class: 'subtitle is-6' %>
     <%= high_chart('fairy', @fairy) %>
   </div>
   <div class="column is-one-third">
-    <%= link_to '魔法使い', '/', class: 'subtitle is-6' %>
+    <%= link_to '魔法使い', 'witch', class: 'subtitle is-6' %>
     <%= high_chart('witch', @witch) %>
   </div>
   <div class="column is-one-third">
-    <%= link_to 'オオカミ', '/', class: 'subtitle is-6' %>
+    <%= link_to 'オオカミ', 'wolf', class: 'subtitle is-6' %>
     <%= high_chart('wolf', @wolf) %>
   </div>
   <div class="column is-one-third">
-    <%= link_to '旅人', '/', class: 'subtitle is-6' %>
+    <%= link_to '旅人', 'traveller', class: 'subtitle is-6' %>
     <%= high_chart('traveller', @traveller) %>
   </div>
 </div>
@@ -78,23 +78,23 @@
 
 <div class="columns is-multiline">
   <div class="column is-one-third">
-    <%= link_to 'ダスク', '/', class: 'subtitle is-6' %>
+    <%= link_to 'ダスク', 'dusk', class: 'subtitle is-6' %>
     <%= high_chart('dusk', @dusk) %>
   </div>
   <div class="column is-one-third">
-    <%= link_to 'バスターブレイド', '/', class: 'subtitle is-6' %>
+    <%= link_to 'バスターブレイド', 'busterblade', class: 'subtitle is-6' %>
     <%= high_chart('busterblade', @busterblade) %>
   </div>
   <div class="column is-one-third">
-    <%= link_to 'アマリリス', '/', class: 'subtitle is-6' %>
+    <%= link_to 'アマリリス', 'amaryllis', class: 'subtitle is-6' %>
     <%= high_chart('amaryllis', @amaryllis) %>
   </div>
   <div class="column is-one-third">
-    <%= link_to 'ベルベット', '/', class: 'subtitle is-6' %>
+    <%= link_to 'ベルベット', 'velvet', class: 'subtitle is-6' %>
     <%= high_chart('velvet', @velvet) %>
   </div>
   <div class="column is-one-third">
-    <%= link_to 'ファイナルデイ', '/', class: 'subtitle is-6' %>
+    <%= link_to 'ファイナルデイ', 'finalday', class: 'subtitle is-6' %>
     <%= high_chart('finalday', @finalday) %>
   </div>
 </div>
