--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -17,23 +17,23 @@
 <div class="columns is-multiline">
   <div class="column is-one-third">
     <%= link_to '主人公', 'heroine', class: 'subtitle is-6' %>
-    <%= high_chart('heroine', @heroine) %>
+    <%= high_chart('heroine', @graphs[:heroine]) %>
   </div>
   <div class="column is-one-third">
     <%= link_to '友達', 'friend', class: 'subtitle is-6' %>
-    <%= high_chart('friend', @friend) %>
+    <%= high_chart('friend', @graphs[:friend]) %>
   </div>
   <div class="column is-one-third">
     <%= link_to '先生', 'teacher', class: 'subtitle is-6' %>
-    <%= high_chart('teacher', @teacher) %>
+    <%= high_chart('teacher', @graphs[:teacher]) %>
   </div>
   <div class="column is-one-third">
     <%= link_to '館の女主人', 'landlady', class: 'subtitle is-6' %>
-    <%= high_chart('landlady', @landlady) %>
+    <%= high_chart('landlady', @graphs[:landlady]) %>
   </div>
   <div class="column is-one-third">
     <%= link_to 'メイド', 'maid', class: 'subtitle is-6' %>
-    <%= high_chart('maid', @maid) %>
+    <%= high_chart('maid', @graphs[:maid]) %>
   </div>
 </div>
 
@@ -48,23 +48,23 @@
 <div class="columns is-multiline">
   <div class="column is-one-third">
     <%= link_to '少女', 'girl', class: 'subtitle is-6' %>
-    <%= high_chart('girl', @girl) %>
+    <%= high_chart('girl', @graphs[:girl]) %>
   </div>
   <div class="column is-one-third">
     <%= link_to '妖精', 'fairy', class: 'subtitle is-6' %>
-    <%= high_chart('fairy', @fairy) %>
+    <%= high_chart('fairy', @graphs[:fairy]) %>
   </div>
   <div class="column is-one-third">
     <%= link_to '魔法使い', 'witch', class: 'subtitle is-6' %>
-    <%= high_chart('witch', @witch) %>
+    <%= high_chart('witch', @graphs[:witch]) %>
   </div>
   <div class="column is-one-third">
     <%= link_to 'オオカミ', 'wolf', class: 'subtitle is-6' %>
-    <%= high_chart('wolf', @wolf) %>
+    <%= high_chart('wolf', @graphs[:wolf]) %>
   </div>
   <div class="column is-one-third">
     <%= link_to '旅人', 'traveller', class: 'subtitle is-6' %>
-    <%= high_chart('traveller', @traveller) %>
+    <%= high_chart('traveller', @graphs[:traveller]) %>
   </div>
 </div>
 
@@ -79,22 +79,22 @@
 <div class="columns is-multiline">
   <div class="column is-one-third">
     <%= link_to 'ダスク', 'dusk', class: 'subtitle is-6' %>
-    <%= high_chart('dusk', @dusk) %>
+    <%= high_chart('dusk', @graphs[:dusk]) %>
   </div>
   <div class="column is-one-third">
     <%= link_to 'バスターブレイド', 'busterblade', class: 'subtitle is-6' %>
-    <%= high_chart('busterblade', @busterblade) %>
+    <%= high_chart('busterblade', @graphs[:busterblade]) %>
   </div>
   <div class="column is-one-third">
     <%= link_to 'アマリリス', 'amaryllis', class: 'subtitle is-6' %>
-    <%= high_chart('amaryllis', @amaryllis) %>
+    <%= high_chart('amaryllis', @graphs[:amaryllis]) %>
   </div>
   <div class="column is-one-third">
     <%= link_to 'ベルベット', 'velvet', class: 'subtitle is-6' %>
-    <%= high_chart('velvet', @velvet) %>
+    <%= high_chart('velvet', @graphs[:velvet]) %>
   </div>
   <div class="column is-one-third">
     <%= link_to 'ファイナルデイ', 'finalday', class: 'subtitle is-6' %>
-    <%= high_chart('finalday', @finalday) %>
+    <%= high_chart('finalday', @graphs[:finalday]) %>
   </div>
 </div>
