--- a/app/views/dashboard/_cast_card.html.erb
+++ b/app/views/dashboard/_cast_card.html.erb
@@ -7,7 +7,7 @@
       </span>
     <% end %>
   </header>
-  <div class="card-content">
+  <div class="card-content is-paddingless">
     <%= high_chart(cast.to_s, @graphs[cast]) %>
   </div>
 </div>
