--- a/app/views/dashboard/_cast_card.html.erb
+++ b/app/views/dashboard/_cast_card.html.erb
@@ -1,6 +1,6 @@
 <div class="card">
   <header class="card-header">
-    <%= link_to 'heroine', class: 'card-header-title' do %>
+    <%= link_to cast.to_s, class: 'card-header-title' do %>
       <%= cast_name %>
       <span class="icon has-text-grey-light">
         <i class="fas fa-external-link-alt"></i>
