--- a/app/views/scores/index.html.erb
+++ b/app/views/scores/index.html.erb
@@ -13,7 +13,7 @@
     <div class="column">
       <%= high_chart('graph', @graph) %>
     </div>
-    <div class="column is-narrow-fullhd">
+    <div class="column is-narrow">
       <table>
         <thead>
           <th>順位</th>
